[tool.poetry]
name = "demo-python-fasthtml"
version = "0.1.0"
description = ""
authors = ["natthasath <natthasath.sak@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "demo_python_fasthtml"}]

[tool.poetry.dependencies]
python = "^3.10"
python-fasthtml = "^0.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
